(wip) updated route params to generate correct swagger
