# apps/TakeInitiative.Api/swagger.json
@@ -555,21 +555,6 @@
           "TakeInitiative.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
         ],
         "operationId": "TakeInitiativeApiFeaturesCampaignsGetCampaign",
-        "requestBody": {
-          "content": {
-            "*/*": {
-              "schema": {
-                "$ref": "#/components/schemas/GetCampaignRequest"
-              }
-            },
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GetCampaignRequest"
-              }
-            }
-          },
-          "required": true
-        },
         "responses": {
           "200": {
             "description": "Success",
@@ -936,21 +921,6 @@
           "TakeInitiative.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
         ],
         "operationId": "TakeInitiativeApiFeaturesCombatsGetCombat",
-        "requestBody": {
-          "content": {
-            "*/*": {
-              "schema": {
-                "$ref": "#/components/schemas/GetCombatRequest"
-              }
-            },
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GetCombatRequest"
-              }
-            }
-          },
-          "required": true
-        },
         "responses": {
           "200": {
             "description": "Success",
@@ -2315,16 +2285,6 @@
         "type": "object",
         "properties": {
           "campaignMemberId": {
-            "type": "string",
-            "format": "uuid"
-          }
-        },
-        "additionalProperties": false
-      },
-      "GetCampaignRequest": {
-        "type": "object",
-        "properties": {
-          "campaignId": {
             "type": "string",
             "format": "uuid"
           }
